packages/rspack/tests/configCases/errors/experiments-css-off/webpack.config.js
module.exports = {
  module: {
    rules: [
      {
        test: /\.css$/,
        type: "css"
      }
    ]
  },
	experiments: {
		css: false
	}
};
